@@ -24,6 +24,8 @@ NOTICE: Restart wiseService before capture when upgrading
              old GET versions still work
   - viewer - reorganize and standardize some APIs
   - viewer - put npm scripts and common npm packages at top level
+  - wise - new config UI, enable with --webconfig
+  - wise - more moloch->arkime changes
 
 2.7.1 2020/12/01
   - release - glib 2.66.2, curl 7.73.0, nghttp2 1.42.0
